# rs_take_home

./: Dockerfile  Makefile  README.md  log4j.properties  pyproject.toml  setup.cfg
.github/workflows/: lint.yml
config/: filepaths.json
data/: example_associations.csv  example_disease_hierarchy.csv  example_disease_labels.csv  example_gene_labels.csv
rs_take_home/: __init__.py  association_counter.py  data_models.py  run.py  schemas.py  utils.py
src/: association_counter.py  data_models.py
tests/: conftest.py  test_asociation_counter.py  test_association_counter.py  test_data_models.py  test_run.py
tests/fixtures/: queries_df.csv
