[tool.poetry]
name = "rs_take_home"
version = "0.1.0"
description = "A template for CI/CD development tools."
authors = ["nicklamiller <nicklamiller@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
numpy = "^1.25.2"
pydantic = "^2.1.1"
scikit-learn = "^1.3.0"
statsmodels = "^0.14.0"
pyspark = "^3.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
autopep8 = "1.6.0"
wemake-python-styleguide = "0.16.1"
unify = "^0.5"
isort = "^5.10.1"
flake8 = "4.0.1"
pre-commit = "^2.20.0"
coverage = "^6.5.0"
pytest-spark = "^0.6.0"
pyspark-test = "^0.2.0"
pytest-lazy-fixture = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
